<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="10dp"
    android:paddingRight="30dp"
    tools:context=".SignIn.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow_login_page"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:text="@string/login_button"
            android:textColor="@color/titleColorGrey"
            android:textSize="17sp" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>


    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@drawable/input_field_background"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:letterSpacing="-0.03"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:textColor="@color/input_field_text_color"
        android:textSize="13sp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/password_text"
            android:layout_marginTop="10dp"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:letterSpacing="-0.02"
            android:paddingStart="30dp"
            android:textSize="13sp" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/filled_button_background"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="-0.03"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sifreni_mi_unuttun"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey2"
            android:letterSpacing="-0.03"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yenile"
            android:textSize="13sp"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/boldGrey"
            android:layout_marginLeft="5dp"
            android:letterSpacing="-0.02"/>

    </LinearLayout>


</LinearLayout>