<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="10dp"
    android:paddingRight="30dp"
    tools:context=".SignUp.F_MusicGenreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow_6"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:text="@string/ilgi_alanlari"
            android:textColor="@color/titleColorGrey"
            android:textSize="17sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:letterSpacing="-0.03"
        android:lineHeight="20dp"
        android:text="@string/muzik_genre_aciklama"
        android:textColor="@color/grey2"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#F3F3F3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_genre_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/music_genre_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="15dp"
        android:background="@drawable/filled_button_background"
        android:elevation="0dp"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="-0.03"
        android:text="@string/devam_et"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp" />


</LinearLayout>